CHANGES
*******

0.9.2 (unreleased)
==================

- Reg was a bit too strict; when you had multiple (but not single)
  predicates, Reg would raise KeyError when you put in an unknown
  key. Now they're just being silently ignored, as they don't do any
  harm.

0.9.1 (2014-11-11)
==================

- A bugfix in the behavior of the fallback logic. In situations with
  multiple predicates of which one is a class predicate it was
  possible for a fallback not to be found even though a fallback was
  available.

0.9 (2014-11-11)
================

Total rewrite of Reg! This includes a range of changes that can break
code. The primary motivations for this rewrite:

* unify predicate system with class-based lookup system.

* extract dispatch information from specific arguments instead of all
  arguments.

Some specific changes:

* Replaced ``@reg.generic`` decorator with ``@reg.dispatch()``
  decorator. This decorator can be configured with predicates that
  extract information from the arguments. Rewrite this::

    @reg.generic
    def foo(obj):
       pass

  to this::

    @reg.dispatch('obj')
    def foo(obj):
       pass

  And this::

    @reg.generic
    def bar(a, b):
        pass

  To this::

    @reg.dispatch('a', 'b')
    def bar(a, b):
        pass

  This is to get dispatch on the classes of these instance
  arguments. If you want to match on the class of an attribute of
  an argument (for instance) you can use ``match_instance``
  with a function::

    @reg.dispatch(match_instance('a', lambda a: a.attr))

  The first argument to ``match_instance`` is the name of the
  predicate by which you refer to it in ``register_function``.

  You can also use ``match_class`` to have direct dispatch on classes
  (useful for replicating classmethods), and ``match_key`` to have
  dispatch on the (immutable) value of the argument (useful for a view
  predicate system). Like for ``match_instance``, you supply functions